Remove dimensions from icons in index.html file; Add hover effect to buttons and icons in profile.css and card.css

--- a/index.html
+++ b/index.html
@@ -29,20 +29,11 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-button">
-              <img
-                src="./images/pencil.svg"
-                width="18.48px"
-                alt="Pencil Icon"
-              />Edit Profile
+              <img src="./images/pencil.svg" alt="Pencil Icon" />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-button">
-            <img
-              src="./images/plus.svg"
-              width="12px"
-              height="12px"
-              alt="Plus Icon"
-            />New Post
+            <img src="./images/plus.svg" alt="Plus Icon" />New Post
           </button>
         </section>
         <section class="cards page__section">
