feat: add custom cards; add functionality to like button && deleting cards

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <template id="card-template">
               <li class="card">
                 <img class="card__image" src="" alt="" />
+                <button
+                  aria-label="Delete Card"
+                  class="card__delete-button"
+                  type="button"
+                ></button>
                 <div class="card__footer">
                   <h2 class="card__title"></h2>
                   <button
