--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button type="button" class="profile__edit-button">
+            <button
+              aria-label="edit profile"
+              class="profile__edit-button"
+              type="button"
+            >
               <img src="./images/pencil.svg" alt="Pencil Icon" />Edit Profile
             </button>
           </div>
@@ -64,7 +68,11 @@
       </footer>
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-button"></button>
+          <button
+            aria-label="close modal"
+            class="modal__close-button"
+            type="button"
+          ></button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
             <label for="profile-name-input" class="modal__label">
@@ -87,13 +95,23 @@
                 placeholder="Describe yourself"
               />
             </label>
-            <button type="submit" class="modal__submit-button">Save</button>
+            <button
+              aria-label="submit modal"
+              class="modal__submit-button"
+              type="submit"
+            >
+              Save
+            </button>
           </form>
         </div>
       </div>
       <div class="modal" id="add-card-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-button"></button>
+          <button
+            aria-label="close modal"
+            class="modal__close-button"
+            type="button"
+          ></button>
           <h2 class="modal__title">New post</h2>
           <form name="add-card-form" class="modal__form">
             <label for="add-card-link-input" class="modal__label">
@@ -119,6 +137,17 @@
             <button type="submit" class="modal__submit-button">Save</button>
           </form>
         </div>
+      </div>
+    </div>
+    <div class="modal" id="preview-modal">
+      <div class="modal__container modal__container_type_preview">
+        <button
+          aria-label="close modal"
+          class="modal__close-button modal__close-button_type_preview"
+          type="button"
+        ></button>
+        <img class="modal__image" src="" alt="" />
+        <p class="modal__caption"></p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
