--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             type="button"
           ></button>
           <h2 class="modal__title">Edit Profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form name="edit-profile" class="modal__form" novalidate>
             <label for="profile-name-input" class="modal__label">
               Name
               <input
@@ -83,7 +83,11 @@
                 class="modal__input"
                 name="name"
                 placeholder="Type your name"
+                required
+                minlength="2"
+                maxlength="40"
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label">
               Description
@@ -93,7 +97,14 @@
                 class="modal__input"
                 name="description"
                 placeholder="Describe yourself"
+                required
+                minlength="2"
+                maxlength="200"
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
             <button
               aria-label="submit modal"
@@ -113,7 +124,7 @@
             type="button"
           ></button>
           <h2 class="modal__title">New post</h2>
-          <form name="add-card-form" class="modal__form">
+          <form name="add-card-form" class="modal__form" novalidate>
             <label for="add-card-link-input" class="modal__label">
               Image link
               <input
@@ -122,7 +133,9 @@
                 class="modal__input"
                 name="link"
                 placeholder="Paste a link to the picture"
+                required
               />
+              <span id="add-card-link-input-error" class="modal__error"></span>
             </label>
             <label for="add-card-name-input" class="modal__label">
               Caption
@@ -132,7 +145,11 @@
                 class="modal__input"
                 name="name"
                 placeholder="Type your caption"
+                required
+                minlength="2"
+                maxlength="30"
               />
+              <span id="add-card-name-input-error" class="modal__error"></span>
             </label>
             <button type="submit" class="modal__submit-button">Save</button>
           </form>
@@ -150,6 +167,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
