--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,16 @@
     />
     <meta name="author" content="Joe Smith" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Spots</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.svg" alt="spot logo" class="header__logo" />
+        <img id="logo-image" alt="spot logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="./images/avatar.jpg"
-            alt="Bessie Coleman"
-            class="profile__avatar"
-          />
+          <img id="avatar-image" alt="Bessie Coleman" class="profile__avatar" />
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
@@ -33,11 +28,11 @@
               class="profile__edit-button"
               type="button"
             >
-              <img src="./images/pencil.svg" alt="Pencil Icon" />Edit Profile
+              <img id="pencil-image" alt="Pencil Icon" />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-button">
-            <img src="./images/plus.svg" alt="Plus Icon" />New Post
+            <img id="plus-image" alt="Plus Icon" />New Post
           </button>
         </section>
         <section class="cards page__section">
@@ -167,7 +162,5 @@
         <p class="modal__caption"></p>
       </div>
     </div>
-    <script defer src="./scripts/validation.js"></script>
-    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
